--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Valterdematos.github.io</h1>
+        <h1>Valter de Matos</h1>
         <p></p>
 
 
-        <p class="view"><a href="https://github.com/valterdematos">View My GitHub Profile</a></p>
+        <p class="view"><a href="mailto:valterdematos@gmail.com">Email</a></p>
 
       </header>
       <section>
