--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <p></p>
 
 
-        <p class="view"><a href="mailto:valterdematos@gmail.com">Email</a></p>
+        <p class="view">Email: <a href="mailto:valterdematos@gmail.com">valterdematos@gmail.com</a></p>
 
       </header>
       <section>
