--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
       </header>
       <section>
         <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>Nesta página podem encontrar o resumo dos programas das cadeiras que estou a lecionar de momento:</p>
 
 <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
@@ -40,15 +40,89 @@ $ git checkout gh-pages
 
 <p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
 
+<h2>
+<a name="anos-arquivo" class="anchor" href="#anos-arquivo"><span class="octicon octicon-link"></span></a>Anos Anteriores</h2>
+
+<p>Arquivo das cadeiras de anos anteriores.</p>
+
 <h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+<a name="2012" class="anchor" href="#2012"><span class="octicon octicon-link"></span></a>2012/2013</h3>
+<p>1º Semestre 2586 Design de Produtos Multimédia<br>
+  2º Semestre 5715 Atelier de Realização Audiovisual e Multimédia II<br>
+  2º Semestre 7031 Computação de Imagem Digital<br>
+  1º Semestre 9453 Tecnologias de Animação Bidimensional<br>
+  2º Semestre 11048 Atelier de Artes Digitais II</p>
+<h3>
+<a name="2011" class="anchor" href="#2011"><span class="octicon octicon-link"></span></a>2011/2012</h3>
+<p>1º Semestre 2279 Introdução à Computação<br>
+  2º Semestre 5715 Atelier de Realização Audiovisual e Multimédia II<br>
+  2º Semestre 5769 Atelier de Design de Sistemas Multimédia I<br>
+  2º Semestre 7031 Computação de Imagem Digital<br>
+  1º Semestre 9453 Tecnologias de Animação Bidimensional</p>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
 
 <h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<a name="2010" class="anchor" href="#2010"><span class="octicon octicon-link"></span></a>2010/2011 <img src="http://s0.wp.com/wp-includes/images/smilies/icon_smile.gif?m=1129645325g" alt=":)" class="wp-smiley" scale="0"></h3>
+<p>1º Semestre 9453 Tecnologias de Animação Bidimensional</p>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<h3>
+<a name="2009" class="anchor" href="#2009"><span class="octicon octicon-link"></span></a>2009/2010</h3>
+<p>1º Semestre 2279 Introdução à Computação<br>
+  1º Semestre 2586 Design de Produtos Multimédia<br>
+  1º Semestre 2590 Computação Multimédia e Interactividade<br>
+  2º Semestre 7282 Desenho e Animação 2D e 3D<br>
+  1º Semestre 9453 Tecnologias de Animação Bidimensional</p>
+
+<h3>
+<a name="2008" class="anchor" href="#2008"><span class="octicon octicon-link"></span></a>2008/2009</h3>
+<p>1º Semestre 2279 Introdução à Computação<br>
+  1º Semestre 2586 Design de Produtos Multimédia<br>
+  1º Semestre 2590 Computação Multimédia e Interactividade<br>
+  1º Semestre 5713 Atelier de Realização Audiovisual e Multimédia I<br>
+  2º Semestre 7282 Desenho e Animação 2D e 3D<br>
+  2º Semestre 7290 Computação Multimédia e Interactividades</p>
+
+<h3>
+<a name="2007" class="anchor" href="#2007"><span class="octicon octicon-link"></span></a>2007/2008</h3>
+<p>1º Semestre 2279 Introdução à Computação<br>
+  1º Semestre 2586 Design de Produtos Multimédia<br>
+  1º Semestre 5713 Atelier de Realização Audiovisual e Multimédia I<br>
+  1º Semestre 7031 Computação de Imagem Digital<br>
+  1º Semestre 7281 Sistemas de Informação Multimédia<br>
+  2º Semestre 7282 Desenho e Animação 2D e 3D</p>
+
+<h3>
+<a name="2006" class="anchor" href="#2006"><span class="octicon octicon-link"></span></a>2006/2007</h3>
+<p>1º Semestre 2279 Introdução à Computação<br>
+  1º Semestre 2586 Design de Produtos Multimédia<br>
+  1º Semestre 2590 Computação Multimédia e Interactividade<br>
+  1º Semestre 4261 Design de Produtos Multimédia I<br>
+  1º Semestre 5713 Atelier de Realização Audiovisual e Multimédia I<br>
+  1º Semestre 7281 Sistemas de Informação Multimédia<br>
+  2º Semestre 7282 Desenho e Animação 2D e 3D<br>
+  1º Semestre 7291 Atelier de Publicidade e Marketing</p>
+
+<h3>
+<a name="2005" class="anchor" href="#2005"><span class="octicon octicon-link"></span></a>2005/2006</h3>
+<p>1º Semestre 2279 Introdução à Computação<br>
+  1º Semestre 2375 Computação Escrita e Gráfica<br>
+  2º Semestre 2377 Computação da Imagem e Som Digitais<br>
+  1º Semestre 2586 Design de Produtos Multimédia<br>
+  1º Semestre 2590 Computação Multimédia e Interactividade<br>
+  1º Semestre 5707 Atelier de Design Multimédia<br>
+  2º Semestre 5707 Atelier de Design Multimédia</p>
+
+
+<h3>
+<a name="2004" class="anchor" href="#2004"><span class="octicon octicon-link"></span></a>Anteriores:</h3>
+<ul>
+  <li>2004-2005</li>
+  <li>2003-2004</li>
+  <li>2002-2003</li>
+  <li>2001-2002</li>
+  <li>2000-2001</li>
+  <li>1999-2000</li>
+</ul>
 
 <h3>
 <a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
@@ -73,3 +147,4 @@ $ git checkout gh-pages
 
   </body>
 </html>
+Status API Training Shop Blog About © 2013 GitHub, Inc. Terms Privacy Security Contact 
