--- a/index.html
+++ b/index.html
@@ -26,24 +26,11 @@
         <h3>
 <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome.</h3>
 
-<p>Nesta página podem encontrar o resumo dos programas das cadeiras que estou a lecionar de momento:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
+<p>Página de registo das cadeiras que estou a lecionar e resumo dos seus programas.<code></code></p>
 <h2>
-<a name="anos-arquivo" class="anchor" href="#anos-arquivo"><span class="octicon octicon-link"></span></a>Anos Anteriores</h2>
+  <a name="anos-arquivo" class="anchor" href="#anos-arquivo"><span class="octicon octicon-link"></span></a>Anos Anteriores</h2>
 
-<p>Arquivo das cadeiras de anos anteriores.</p>
+<p>Listagem das cadeiras lecionadas em anos anteriores.</p>
 
 <h3>
 <a name="2012" class="anchor" href="#2012"><span class="octicon octicon-link"></span></a>2012/2013</h3>
@@ -147,4 +134,3 @@ $ git checkout gh-pages
 
   </body>
 </html>
-Status API Training Shop Blog About © 2013 GitHub, Inc. Terms Privacy Security Contact 
