--- a/index.html
+++ b/index.html
@@ -1,136 +1,111 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Valterdematos.github.io by valterdematos</title>
-
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
+<head>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="chrome=1">
+<title>Valterdematos.github.io by valterdematos</title>
+<link rel="stylesheet" href="stylesheets/styles.css">
+<link rel="stylesheet" href="stylesheets/pygment_trac.css">
+<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+<!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1>Valter de Matos</h1>
-        <p></p>
-
-
-        <p class="view">Email: <a href="mailto:valterdematos@gmail.com">valterdematos@gmail.com</a></p>
-
-      </header>
-      <section>
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome.</h3>
-
-<p>Página de registo das cadeiras que estou a lecionar e resumo dos seus programas.<code></code></p>
-<h2>
-  <a name="anos-arquivo" class="anchor" href="#anos-arquivo"><span class="octicon octicon-link"></span></a>Anos Anteriores</h2>
-
-<p>Listagem das cadeiras lecionadas em anos anteriores.</p>
-
-<h3>
-<a name="2012" class="anchor" href="#2012"><span class="octicon octicon-link"></span></a>2012/2013</h3>
-<p>1º Semestre 2586 Design de Produtos Multimédia<br>
-  2º Semestre 5715 Atelier de Realização Audiovisual e Multimédia II<br>
-  2º Semestre 7031 Computação de Imagem Digital<br>
-  1º Semestre 9453 Tecnologias de Animação Bidimensional<br>
-  2º Semestre 11048 Atelier de Artes Digitais II</p>
-<h3>
-<a name="2011" class="anchor" href="#2011"><span class="octicon octicon-link"></span></a>2011/2012</h3>
-<p>1º Semestre 2279 Introdução à Computação<br>
-  2º Semestre 5715 Atelier de Realização Audiovisual e Multimédia II<br>
-  2º Semestre 5769 Atelier de Design de Sistemas Multimédia I<br>
-  2º Semestre 7031 Computação de Imagem Digital<br>
-  1º Semestre 9453 Tecnologias de Animação Bidimensional</p>
-
-
-<h3>
-<a name="2010" class="anchor" href="#2010"><span class="octicon octicon-link"></span></a>2010/2011 <img src="http://s0.wp.com/wp-includes/images/smilies/icon_smile.gif?m=1129645325g" alt=":)" class="wp-smiley" scale="0"></h3>
-<p>1º Semestre 9453 Tecnologias de Animação Bidimensional</p>
-
-<h3>
-<a name="2009" class="anchor" href="#2009"><span class="octicon octicon-link"></span></a>2009/2010</h3>
-<p>1º Semestre 2279 Introdução à Computação<br>
-  1º Semestre 2586 Design de Produtos Multimédia<br>
-  1º Semestre 2590 Computação Multimédia e Interactividade<br>
-  2º Semestre 7282 Desenho e Animação 2D e 3D<br>
-  1º Semestre 9453 Tecnologias de Animação Bidimensional</p>
-
-<h3>
-<a name="2008" class="anchor" href="#2008"><span class="octicon octicon-link"></span></a>2008/2009</h3>
-<p>1º Semestre 2279 Introdução à Computação<br>
-  1º Semestre 2586 Design de Produtos Multimédia<br>
-  1º Semestre 2590 Computação Multimédia e Interactividade<br>
-  1º Semestre 5713 Atelier de Realização Audiovisual e Multimédia I<br>
-  2º Semestre 7282 Desenho e Animação 2D e 3D<br>
-  2º Semestre 7290 Computação Multimédia e Interactividades</p>
-
-<h3>
-<a name="2007" class="anchor" href="#2007"><span class="octicon octicon-link"></span></a>2007/2008</h3>
-<p>1º Semestre 2279 Introdução à Computação<br>
-  1º Semestre 2586 Design de Produtos Multimédia<br>
-  1º Semestre 5713 Atelier de Realização Audiovisual e Multimédia I<br>
-  1º Semestre 7031 Computação de Imagem Digital<br>
-  1º Semestre 7281 Sistemas de Informação Multimédia<br>
-  2º Semestre 7282 Desenho e Animação 2D e 3D</p>
-
-<h3>
-<a name="2006" class="anchor" href="#2006"><span class="octicon octicon-link"></span></a>2006/2007</h3>
-<p>1º Semestre 2279 Introdução à Computação<br>
-  1º Semestre 2586 Design de Produtos Multimédia<br>
-  1º Semestre 2590 Computação Multimédia e Interactividade<br>
-  1º Semestre 4261 Design de Produtos Multimédia I<br>
-  1º Semestre 5713 Atelier de Realização Audiovisual e Multimédia I<br>
-  1º Semestre 7281 Sistemas de Informação Multimédia<br>
-  2º Semestre 7282 Desenho e Animação 2D e 3D<br>
-  1º Semestre 7291 Atelier de Publicidade e Marketing</p>
-
-<h3>
-<a name="2005" class="anchor" href="#2005"><span class="octicon octicon-link"></span></a>2005/2006</h3>
-<p>1º Semestre 2279 Introdução à Computação<br>
-  1º Semestre 2375 Computação Escrita e Gráfica<br>
-  2º Semestre 2377 Computação da Imagem e Som Digitais<br>
-  1º Semestre 2586 Design de Produtos Multimédia<br>
-  1º Semestre 2590 Computação Multimédia e Interactividade<br>
-  1º Semestre 5707 Atelier de Design Multimédia<br>
-  2º Semestre 5707 Atelier de Design Multimédia</p>
-
-
-<h3>
-<a name="2004" class="anchor" href="#2004"><span class="octicon octicon-link"></span></a>Anteriores:</h3>
-<ul>
-  <li>2004-2005</li>
-  <li>2003-2004</li>
-  <li>2002-2003</li>
-  <li>2001-2002</li>
-  <li>2000-2001</li>
-  <li>1999-2000</li>
-</ul>
-
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-      <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
+</head>
+<body>
+<div class="wrapper">
+  <header>
+    <h1>Valter de Matos</h1>
+    <p></p>
+    <p class="view">Email: <a href="mailto:valterdematos@gmail.com">valterdematos@gmail.com</a></p>
+  </header>
+  <section>
+    <h3> <a name="welcome" class="anchor" href="#welcome"><span class="octicon octicon-link"></span></a>Bem-vindo.</h3>
+    <p>Página de registo das cadeiras que estou a lecionar e resumo dos seus programas.<code></code></p>
+    <h2> <a name="2013" class="anchor" href="#2013"><span class="octicon octicon-link"></span></a>2013/2014</h2>
+    <p>1º Semestre 9453 Tecnologias de Animação Bidimensional<br>
+      1º Semestre xxxx Computação Multimédia e Interactividade</p>
+    <div class="pagehead">
+      <div class="container">
+        <h1>Anos Anteriores</h1>
+      </div>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
-              <script type="text/javascript">
+    <p>Listagem das cadeiras lecionadas em anos anteriores.</p>
+    <h2> <a name="anos-arquivo" class="anchor" href="#anos-arquivo"><span class="octicon octicon-link"></span></a>Anos lectivos em netPA</h2>
+    <h3> <a name="2012" class="anchor" href="#2012"><span class="octicon octicon-link"></span></a>2012/2013</h3>
+    <p>1º Semestre 2586 Design de Produtos Multimédia<br>
+      2º Semestre 5715 Atelier de Realização Audiovisual e Multimédia II<br>
+      2º Semestre 7031 Computação de Imagem Digital<br>
+      1º Semestre 9453 Tecnologias de Animação Bidimensional<br>
+      2º Semestre 11048 Atelier de Artes Digitais II</p>
+    <h3> <a name="2011" class="anchor" href="#2011"><span class="octicon octicon-link"></span></a>2011/2012</h3>
+    <p>1º Semestre 2279 Introdução à Computação<br>
+      2º Semestre 5715 Atelier de Realização Audiovisual e Multimédia II<br>
+      2º Semestre 5769 Atelier de Design de Sistemas Multimédia I<br>
+      2º Semestre 7031 Computação de Imagem Digital<br>
+      1º Semestre 9453 Tecnologias de Animação Bidimensional</p>
+    <h3> <a name="2010" class="anchor" href="#2010"><span class="octicon octicon-link"></span></a>2010/2011 <img src="http://s0.wp.com/wp-includes/images/smilies/icon_smile.gif?m=1129645325g" alt=":)" class="wp-smiley" scale="0"></h3>
+    <p>1º Semestre 9453 Tecnologias de Animação Bidimensional</p>
+    <h3> <a name="2009" class="anchor" href="#2009"><span class="octicon octicon-link"></span></a>2009/2010</h3>
+    <p>1º Semestre 2279 Introdução à Computação<br>
+      1º Semestre 2586 Design de Produtos Multimédia<br>
+      1º Semestre 2590 Computação Multimédia e Interactividade<br>
+      2º Semestre 7282 Desenho e Animação 2D e 3D<br>
+      1º Semestre 9453 Tecnologias de Animação Bidimensional</p>
+    <h3> <a name="2008" class="anchor" href="#2008"><span class="octicon octicon-link"></span></a>2008/2009</h3>
+    <p>1º Semestre 2279 Introdução à Computação<br>
+      1º Semestre 2586 Design de Produtos Multimédia<br>
+      1º Semestre 2590 Computação Multimédia e Interactividade<br>
+      1º Semestre 5713 Atelier de Realização Audiovisual e Multimédia I<br>
+      2º Semestre 7282 Desenho e Animação 2D e 3D<br>
+      2º Semestre 7290 Computação Multimédia e Interactividades</p>
+    <h3> <a name="2007" class="anchor" href="#2007"><span class="octicon octicon-link"></span></a>2007/2008</h3>
+    <p>1º Semestre 2279 Introdução à Computação<br>
+      1º Semestre 2586 Design de Produtos Multimédia<br>
+      1º Semestre 5713 Atelier de Realização Audiovisual e Multimédia I<br>
+      1º Semestre 7031 Computação de Imagem Digital<br>
+      1º Semestre 7281 Sistemas de Informação Multimédia<br>
+      2º Semestre 7282 Desenho e Animação 2D e 3D</p>
+    <h3> <a name="2006" class="anchor" href="#2006"><span class="octicon octicon-link"></span></a>2006/2007</h3>
+    <p>1º Semestre 2279 Introdução à Computação<br>
+      1º Semestre 2586 Design de Produtos Multimédia<br>
+      1º Semestre 2590 Computação Multimédia e Interactividade<br>
+      1º Semestre 4261 Design de Produtos Multimédia I<br>
+      1º Semestre 5713 Atelier de Realização Audiovisual e Multimédia I<br>
+      1º Semestre 7281 Sistemas de Informação Multimédia<br>
+      2º Semestre 7282 Desenho e Animação 2D e 3D<br>
+      1º Semestre 7291 Atelier de Publicidade e Marketing</p>
+    <h3> <a name="2005" class="anchor" href="#2005"><span class="octicon octicon-link"></span></a>2005/2006</h3>
+    <p>1º Semestre 2279 Introdução à Computação<br>
+      1º Semestre 2375 Computação Escrita e Gráfica<br>
+      2º Semestre 2377 Computação da Imagem e Som Digitais<br>
+      1º Semestre 2586 Design de Produtos Multimédia<br>
+      1º Semestre 2590 Computação Multimédia e Interactividade<br>
+      1º Semestre 5707 Atelier de Design Multimédia<br>
+      2º Semestre 5707 Atelier de Design Multimédia</p>
+    <h3> <a name="2004" class="anchor" href="#2004"><span class="octicon octicon-link"></span></a>Anos lectivos anteriores ao netPA:</h3>
+    <ul>
+      <li>2004-2005</li>
+      <li>2003-2004</li>
+      <li>2002-2003</li>
+      <li>2001-2002</li>
+      <li>2000-2001</li>
+      <li>1999-2000</li>
+    </ul>
+  </section>
+  <footer>
+    <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+  </footer>
+</div>
+<script src="javascripts/scale.fix.js"></script> 
+<script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-          </script>
-          <script type="text/javascript">
+          </script> 
+<script type="text/javascript">
             try {
               var pageTracker = _gat._getTracker("UA-8547796-13");
             pageTracker._trackPageview();
             } catch(err) {}
           </script>
-
-  </body>
+</body>
 </html>
