--- a/index.html
+++ b/index.html
@@ -21,15 +21,30 @@
   <section>
     <h3> <a name="welcome" class="anchor" href="#welcome"><span class="octicon octicon-link"></span></a>Bem-vindo.</h3>
     <p>Página de registo das cadeiras que estou a lecionar e resumo dos seus programas.<code></code></p>
-    <h2> <a name="2013" class="anchor" href="#2013"><span class="octicon octicon-link"></span></a>2013/2014</h2>
-    <p>1º Semestre 9453 Tecnologias de Animação Bidimensional<br>
-      1º Semestre xxxx Computação Multimédia e Interactividade</p>
     <div class="pagehead">
       <div class="container">
-        <h1>Anos Anteriores</h1>
+        <h1>2013/2014</h1>
       </div>
     </div>
-    <p>Listagem das cadeiras lecionadas em anos anteriores.</p>
+    <h2> <a name="2013" class="anchor" href="#2013"><span class="octicon octicon-link"></span></a>Tecnologias de Animação Bidimensional</h2>
+    <div class="bubble">
+      <div class="branch-status edit-comment-hide status-success">
+        <p> <span class="octicon octicon-check"></span> <strong>Resumo</strong></p>
+      </div>
+      <div class="mergeable dirty">
+        <div class="merge-message">
+          <div class="js-details-container">
+            <h3 class="merge-branch-heading">Programa</h3>
+            <p class="merge-branch-description">...</p>
+            <h3 class="merge-branch-heading">Objectivos</h3>
+            <p class="merge-branch-description">...</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <h2> <a name="2013" class="anchor" href="#2013"><span class="octicon octicon-link"></span></a>Computação Multimédia e Interactividade</h2>
+    <p>programa</p>
+    <p>&nbsp;</p>
     <h2> <a name="anos-arquivo" class="anchor" href="#anos-arquivo"><span class="octicon octicon-link"></span></a>Anos lectivos em netPA</h2>
     <h3> <a name="2012" class="anchor" href="#2012"><span class="octicon octicon-link"></span></a>2012/2013</h3>
     <p>1º Semestre 2586 Design de Produtos Multimédia<br>
@@ -82,15 +97,13 @@
       1º Semestre 2590 Computação Multimédia e Interactividade<br>
       1º Semestre 5707 Atelier de Design Multimédia<br>
       2º Semestre 5707 Atelier de Design Multimédia</p>
-    <h3> <a name="2004" class="anchor" href="#2004"><span class="octicon octicon-link"></span></a>Anos lectivos anteriores ao netPA:</h3>
-    <ul>
-      <li>2004-2005</li>
-      <li>2003-2004</li>
-      <li>2002-2003</li>
-      <li>2001-2002</li>
-      <li>2000-2001</li>
-      <li>1999-2000</li>
-    </ul>
+    <h2> <a name="2004" class="anchor" href="#2004"><span class="octicon octicon-link"></span></a>Anos lectivos anteriores ao netPA</h2>
+    <h3>2004-2005<br>
+      2003-2004<br>
+      2002-2003<br>
+      2001-2002<br>
+      2000-2001<br>
+      1999-2000</h3>
   </section>
   <footer>
     <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
