--- a/index.html
+++ b/index.html
@@ -27,24 +27,46 @@
       </div>
     </div>
     <h2> <a name="2013" class="anchor" href="#2013"><span class="octicon octicon-link"></span></a>Tecnologias de Animação Bidimensional</h2>
-    <div class="bubble">
-      <div class="branch-status edit-comment-hide status-success">
-        <p> <span class="octicon octicon-check"></span> <strong>Resumo</strong></p>
-      </div>
-      <div class="mergeable dirty">
-        <div class="merge-message">
-          <div class="js-details-container">
-            <h3 class="merge-branch-heading">Programa</h3>
-            <p class="merge-branch-description">...</p>
-            <h3 class="merge-branch-heading">Objectivos</h3>
-            <p class="merge-branch-description">...</p>
-          </div>
+<div class="merge-branch  js-details-container">
+  <div class="merge-status-icon"> <span class="mega-octicon octicon-git-pull-request"></span> </div>
+  <div class="bubble">
+    <div class="branch-status edit-comment-hide status-success">
+      <p> <span class="octicon octicon-check"></span> <strong>Resumo</strong> — Everything is awesome! </p>
+    </div>
+    <div class="mergeable dirty">
+      <div class="merge-message">
+        <div class="js-details-container">
+          <h3 class="merge-branch-heading">Objectivos</h3>
+          <p class="merge-branch-description">...</p>
+          <h3 class="merge-branch-heading">Programa</h3>
+          <p class="merge-branch-description">...</p>
         </div>
       </div>
     </div>
+  </div>
+</div>
+    
     <h2> <a name="2013" class="anchor" href="#2013"><span class="octicon octicon-link"></span></a>Computação Multimédia e Interactividade</h2>
-    <p>programa</p>
-    <p>&nbsp;</p>
+<div class="merge-branch  js-details-container">
+  <div class="merge-status-icon"> <span class="mega-octicon octicon-git-pull-request"></span> </div>
+  <div class="bubble">
+    <div class="branch-status edit-comment-hide status-success">
+      <p> <span class="octicon octicon-check"></span> <strong>Resumo</strong> — Everything is awesome! </p>
+    </div>
+    <div class="mergeable dirty">
+      <div class="merge-message">
+        <div class="js-details-container">
+          <h3 class="merge-branch-heading">Objectivos</h3>
+          <p class="merge-branch-description">...</p>
+          <h3 class="merge-branch-heading">Programa</h3>
+          <p class="merge-branch-description">...</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+    <hr />
     <h2> <a name="anos-arquivo" class="anchor" href="#anos-arquivo"><span class="octicon octicon-link"></span></a>Anos lectivos em netPA</h2>
     <h3> <a name="2012" class="anchor" href="#2012"><span class="octicon octicon-link"></span></a>2012/2013</h3>
     <p>1º Semestre 2586 Design de Produtos Multimédia<br>
