--- a/index.html
+++ b/index.html
@@ -27,31 +27,38 @@
       </div>
     </div>
     <h2> <a name="2013" class="anchor" href="#2013"><span class="octicon octicon-link"></span></a>Tecnologias de Animação Bidimensional</h2>
-<div class="merge-branch  js-details-container">
-  <div class="merge-status-icon"> <span class="mega-octicon octicon-git-pull-request"></span> </div>
-  <div class="bubble">
-    <div class="branch-status edit-comment-hide status-success">
-      <p> <span class="octicon octicon-check"></span> <strong>Resumo</strong> — Everything is awesome! </p>
-    </div>
-    <div class="mergeable dirty">
-      <div class="merge-message">
-        <div class="js-details-container">
-          <h3 class="merge-branch-heading">Objectivos</h3>
-          <p class="merge-branch-description">...</p>
-          <h3 class="merge-branch-heading">Programa</h3>
-          <p class="merge-branch-description">...</p>
-        </div>
-      </div>
+  <div class="boxed-group">
+    <h3>Resumo</h3>
+    <div class="boxed-group-inner seamless">
+      <table class="boxed-group-table">
+        <tr>
+          <th scope="row">Objectivos</th>
+          <td>Os alunos devem adquirir um conhecimento profundo do software aplicado a diversas técnicas de animação 2D.</td>
+        </tr>
+        <tr>
+          <th scope="row">Tópicos</th>
+          <td><p>Ferramentas de desenho e manipulação de objectos.</p>
+            <p>Gestão de cores.</p>
+            <p>Importação de objectos externos (vector, bitmap, áudio e vídeo).</p>
+            <p>Manutenção da Biblioteca.</p>
+            <p>Composição de cenas e edição da Linha do Tempo.</p>
+            <p>Design de Personagens e optimização para animação limitada.</p>
+            <p>Animação com ferramenta de &quot;bones&quot; (Inverse Kinematics)</p>
+            <p>Animação em blocos complementares.</p>
+            <p>Outros: loops, efeitos especiais, trajectos e máscaras.</p>
+            <p>Importação de áudio e sincronismo de diálogos/acção.</p>
+          <p>Exportação da animação final ou blocos de animação para edição externa.</p></td>
+        </tr>
+      </table>
     </div>
   </div>
-</div>
     
     <h2> <a name="2013" class="anchor" href="#2013"><span class="octicon octicon-link"></span></a>Computação Multimédia e Interactividade</h2>
 <div class="merge-branch  js-details-container">
   <div class="merge-status-icon"> <span class="mega-octicon octicon-git-pull-request"></span> </div>
   <div class="bubble">
     <div class="branch-status edit-comment-hide status-success">
-      <p> <span class="octicon octicon-check"></span> <strong>Resumo</strong> — Everything is awesome! </p>
+      <p> <span class="octicon octicon-check"></span> <strong>Resumo</strong></p>
     </div>
     <div class="mergeable dirty">
       <div class="merge-message">
