--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
     <p class="view">Email: <a href="mailto:valterdematos@gmail.com">valterdematos@gmail.com</a></p>
   </header>
   <section>
-    <h3> <a name="welcome" class="anchor" href="#welcome"><span class="octicon octicon-link"></span></a>Bem-vindo.</h3>
-    <p>Página de registo das cadeiras que estou a lecionar e resumo dos seus programas.<code></code></p>
     <div class="pagehead">
       <div class="container">
         <h1>2013/2014</h1>
       </div>
     </div>
-    <h2> <a name="2013" class="anchor" href="#2013"><span class="octicon octicon-link"></span></a>Tecnologias de Animação Bidimensional</h2>
+    <h2>Tecnologias de Animação Bidimensional</h2>
     <div class="boxed-group">
-      <h3>Resumo</h3>
       <div class="boxed-group-inner seamless">
         <table border="0" cellpadding="0" cellspacing="0" class="boxed-group-table">
+          <caption>
+          Resumo
+          </caption>
           <tr>
             <th scope="row">Objectivos</th>
             <td>Os alunos devem adquirir um conhecimento profundo do software aplicado a diversas técnicas de animação 2D.</td>
@@ -49,30 +49,70 @@
               Importação de áudio e sincronismo de diálogos/acção. <br>
               Exportação da animação final ou blocos de animação para edição externa.</td>
           </tr>
+          <tr>
+            <th scope="row">Bibliografia</th>
+            <td>Apoios, tutoriais e visonamentos disponibilizados nas aulas. <br>
+              Càmara, S., O Desenho Animado, Editorial Estampa, 2005 <br>
+              Corsaro, S., The Flash Animator, New Riders Publishing, 2002 <br>
+              Georgenes C., How to Cheat in Adobe Flash CS4, Focal Press, 2009 <br>
+              Jackson, C., Flash Cinematic Techniques Enhancing Animated Shorts and Interactive Storytelling, Focal Press, 2010 <br>
+              Jones, T., et al. Foundation Flash Cartoon Animation, Apress, 2007<br>
+              Reinhard, R. e Dowd, S., Macromedia Flash CS4 Professional Bible, Wiley Publishing, 2009 <br>
+              Webster, C., Animation The Mechanics of Motion, Focal Press, 2005 <br>
+              White, T., How to Make an Animated Film, Focal Press, 2009</td>
+          </tr>
         </table>
       </div>
     </div>
-    <h2> <a name="2013" class="anchor" href="#2013"><span class="octicon octicon-link"></span></a>Computação Multimédia e Interactividade</h2>
-    <div class="merge-branch  js-details-container">
-      <div class="merge-status-icon"> <span class="mega-octicon octicon-git-pull-request"></span> </div>
-      <div class="bubble">
-        <div class="branch-status edit-comment-hide status-success">
-          <p> <span class="octicon octicon-check"></span> <strong>Resumo</strong></p>
-        </div>
-        <div class="mergeable dirty">
-          <div class="merge-message">
-            <div class="js-details-container">
-              <h3 class="merge-branch-heading">Objectivos</h3>
-              <p class="merge-branch-description">...</p>
-              <h3 class="merge-branch-heading">Programa</h3>
-              <p class="merge-branch-description">...</p>
-            </div>
-          </div>
-        </div>
+    <h2>Computação Multimédia e Interactividade</h2>
+    <div class="boxed-group">
+      <div class="boxed-group-inner seamless">
+        <table border="0" cellpadding="0" cellspacing="0" class="boxed-group-table">
+          <caption>
+          Resumo
+          </caption>
+          <tr>
+            <th scope="row">Objectivos</th>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <th scope="row">Tópicos</th>
+            <td>&nbsp;</td>
+          </tr>
+          <tr>
+            <th scope="row">Bibliografia</th>
+            <td><p>Cederholm, Dan, and Jeffrey Zeldman. CSS3 for Web Designers. New York: Book Apart, 2010.<br>
+                Keith, Jeremy, and Jeffrey Zeldman. HTML5 for Web Designers. New York: Book Apart, 2010.<br>
+                Marcotte, Ethan. Responsive Web Design. New York: Book Apart, 2011<br>
+                Wroblewski, Luke. Mobile First. New York: Book Apart, 2011</p></td>
+          </tr>
+        </table>
       </div>
     </div>
+<h2>Design de Produtos Multimédia</h2>
+    <div class="boxed-group">
+      <div class="boxed-group-inner seamless">
+        <table border="0" cellpadding="0" cellspacing="0" class="boxed-group-table">
+          <caption>
+          Resumo
+          </caption>
+          <tr>
+            <th scope="row">Objectivos</th>
+            <td>.</td>
+          </tr>
+          <tr>
+            <th scope="row">Tópicos</th>
+            <td>.</td>
+          </tr>
+          <tr>
+            <th scope="row">Bibliografia</th>
+            <td>.</td>
+          </tr>
+        </table>
+      </div>
+    </div>    
     <hr />
-    <h2> <a name="anos-arquivo" class="anchor" href="#anos-arquivo"><span class="octicon octicon-link"></span></a>Anos lectivos em netPA</h2>
+    <h2>Anos lectivos em netPA</h2>
     <h3> <a name="2012" class="anchor" href="#2012"><span class="octicon octicon-link"></span></a>2012/2013</h3>
     <p>1º Semestre 2586 Design de Produtos Multimédia<br>
       2º Semestre 5715 Atelier de Realização Audiovisual e Multimédia II<br>
