--- a/index.html
+++ b/index.html
@@ -73,23 +73,46 @@
           </caption>
           <tr>
             <th scope="row">Objectivos</th>
-            <td>&nbsp;</td>
+            <td><p>Aquisição de um conhecimento profundo das mais recentes metodologias e tecnologias de produção de websites no frontend design e compatibilidade mobile / desktop.</p>
+              <ul>
+                <li> Familiarização com o Estado da Arte técnico do design/desenvolvimento web; </li>
+                <li> Aquisição de competências em tecnologias modernas de produção web com especial incidência na sensibilização ao mobile e responsive web design;</li>
+                <li>Familiarização com uma framework de HTML/CSS/Javascript que cumpra com os propósitos anteriores. </li>
+              </ul></td>
           </tr>
           <tr>
             <th scope="row">Tópicos</th>
-            <td>&nbsp;</td>
+            <td><ul>
+              <li> Resumo Estado da Arte; <br>
+                </li>
+              <li> <em>Frameworks</em>; <br>
+                </li>
+              <li>Introdução ao Bootstrap;</li>
+              <li>RWD: <em>media queries</em> e <em>mobile first</em>;</li>
+              <li>Bootstrap <em>grid</em>: default e fluido;</li>
+              <li>Outros: CSS, componentes e javascript;</li>
+              <li>Personalização do Bootstrap;</li>
+              <li>Projecto</li>
+            </ul>            </td>
           </tr>
           <tr>
             <th scope="row">Bibliografia</th>
-            <td><p>Cederholm, Dan, and Jeffrey Zeldman. CSS3 for Web Designers. New York: Book Apart, 2010.<br>
-                Keith, Jeremy, and Jeffrey Zeldman. HTML5 for Web Designers. New York: Book Apart, 2010.<br>
-                Marcotte, Ethan. Responsive Web Design. New York: Book Apart, 2011<br>
-                Wroblewski, Luke. Mobile First. New York: Book Apart, 2011</p></td>
+            <td><ul>
+              <li>Cederholm, Dan, and Jeffrey Zeldman. CSS3 for Web Designers. New York: Book Apart, 2010.<br>
+                </li>
+              <li>Keith, Jeremy, and Jeffrey Zeldman. HTML5 for Web Designers. New York: Book Apart, 2010.<br>
+                </li>
+              <li>Marcotte, Ethan. Responsive Web Design. New York: Book Apart, 2011<br>
+                </li>
+              <li>Wroblewski, Luke. Mobile First. New York: Book Apart, 2011<br>
+                </li>
+              <li>Spurlock, Jake. Bootstrap. Sebastopol, CA: O'Reilly Media, 2013. Print. </li>
+            </ul></td>
           </tr>
         </table>
       </div>
     </div>
-<h2>Design de Produtos Multimédia</h2>
+    <h2>Design de Produtos Multimédia</h2>
     <div class="boxed-group">
       <div class="boxed-group-inner seamless">
         <table border="0" cellpadding="0" cellspacing="0" class="boxed-group-table">
@@ -110,7 +133,7 @@
           </tr>
         </table>
       </div>
-    </div>    
+    </div>
     <hr />
     <h2>Anos lectivos em netPA</h2>
     <h3> <a name="2012" class="anchor" href="#2012"><span class="octicon octicon-link"></span></a>2012/2013</h3>
