--- a/index.html
+++ b/index.html
@@ -37,29 +37,51 @@
           </tr>
           <tr>
             <th scope="row">Tópicos</th>
-            <td>Ferramentas de desenho e manipulação de objectos. <br>
-              Gestão de cores. <br>
-              Importação de objectos externos (vector, bitmap, áudio e vídeo). <br>
-              Manutenção da Biblioteca. <br>
-              Composição de cenas e edição da Linha do Tempo. <br>
-              Design de Personagens e optimização para animação limitada. <br>
-              Animação com ferramenta de &quot;bones&quot; (Inverse Kinematics) <br>
-              Animação em blocos complementares. <br>
-              Outros: loops, efeitos especiais, trajectos e máscaras. <br>
-              Importação de áudio e sincronismo de diálogos/acção. <br>
-              Exportação da animação final ou blocos de animação para edição externa.</td>
+            <td><ul>
+              <li>Ferramentas de desenho e manipulação de objectos. <br>
+                </li>
+              <li>Gestão de cores. <br>
+                </li>
+              <li>Importação de objectos externos (vector, bitmap, áudio e vídeo). <br>
+                </li>
+              <li>Manutenção da Biblioteca. <br>
+                </li>
+              <li>Composição de cenas e edição da Linha do Tempo. <br>
+                </li>
+              <li>Design de Personagens e optimização para animação limitada. <br>
+                </li>
+              <li>Animação com ferramenta de &quot;bones&quot; (Inverse Kinematics) <br>
+                </li>
+              <li>Animação em blocos complementares. <br>
+                </li>
+              <li>Outros: loops, efeitos especiais, trajectos e máscaras. <br>
+                </li>
+              <li>Importação de áudio e sincronismo de diálogos/acção. <br>
+                </li>
+              <li>Exportação da animação final ou blocos de animação para edição externa.</li>
+            </ul></td>
           </tr>
           <tr>
             <th scope="row">Bibliografia</th>
-            <td>Apoios, tutoriais e visonamentos disponibilizados nas aulas. <br>
-              Càmara, S., O Desenho Animado, Editorial Estampa, 2005 <br>
-              Corsaro, S., The Flash Animator, New Riders Publishing, 2002 <br>
-              Georgenes C., How to Cheat in Adobe Flash CS4, Focal Press, 2009 <br>
-              Jackson, C., Flash Cinematic Techniques Enhancing Animated Shorts and Interactive Storytelling, Focal Press, 2010 <br>
-              Jones, T., et al. Foundation Flash Cartoon Animation, Apress, 2007<br>
-              Reinhard, R. e Dowd, S., Macromedia Flash CS4 Professional Bible, Wiley Publishing, 2009 <br>
-              Webster, C., Animation The Mechanics of Motion, Focal Press, 2005 <br>
-              White, T., How to Make an Animated Film, Focal Press, 2009</td>
+            <td><ul>
+              <li>Apoios, tutoriais e visonamentos disponibilizados nas aulas. <br>
+                </li>
+              <li>Càmara, S., O Desenho Animado, Editorial Estampa, 2005 <br>
+                </li>
+              <li>Corsaro, S., The Flash Animator, New Riders Publishing, 2002 <br>
+                </li>
+              <li>Georgenes C., How to Cheat in Adobe Flash CS4, Focal Press, 2009 <br>
+                </li>
+              <li>Jackson, C., Flash Cinematic Techniques Enhancing Animated Shorts and Interactive Storytelling, Focal Press, 2010 <br>
+                </li>
+              <li>Jones, T., et al. Foundation Flash Cartoon Animation, Apress, 2007<br>
+                </li>
+              <li>Reinhard, R. e Dowd, S., Macromedia Flash CS4 Professional Bible, Wiley Publishing, 2009 <br>
+                </li>
+              <li>Webster, C., Animation The Mechanics of Motion, Focal Press, 2005 <br>
+                </li>
+              <li>White, T., How to Make an Animated Film, Focal Press, 2009</li>
+            </ul></td>
           </tr>
         </table>
       </div>
