--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <header>
     <h1>Valter de Matos</h1>
     <p></p>
-    <p class="view">Email: <a href="mailto:valterdematos@gmail.com">valterdematos@gmail.com</a></p>
+    <p class="view">pusher of pixels</p>
   </header>
   <section>
     <div class="pagehead">
