--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="chrome=1">
+<meta charset="utf-8" />
+<meta http-equiv="X-UA-Compatible" content="chrome=1" />
 <title>Valterdematos.github.io by valterdematos</title>
-<link rel="stylesheet" href="stylesheets/styles.css">
-<link rel="stylesheet" href="stylesheets/pygment_trac.css">
-<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+<link rel="stylesheet" href="stylesheets/further.css" />
+<link rel="stylesheet" href="stylesheets/styles.css" />
+<link rel="stylesheet" href="stylesheets/pygment_trac.css" />
+<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -16,15 +17,21 @@
   <header>
     <h1>Valter de Matos</h1>
     <p></p>
-    <p class="view">pusher of pixels</p>
+    <p class="view">pusher of pixels...</p>
   </header>
   <section>
+    <ul class="dashboard-tabs">
+      <li><a href="#tab2013">TAB <span class="counter">AD</span></a></li>  
+      <li><a href="#cmi2013">CMI <span class="counter">AMV</span></a></li>      
+      <li><a href="#dpm2013">TAB <span class="counter">AD</span></a></li>
+      <li><a href="#arquivo">Arquivo</li>
+    </ul>
     <div class="pagehead">
       <div class="container">
         <h1>2013/2014</h1>
       </div>
     </div>
-    <h2>Tecnologias de Animação Bidimensional</h2>
+    <h2> <a name="tab2013" class="anchor" href="#tab2013"><span class="octicon octicon-link"></span></a> Tecnologias de Animação Bidimensional</h2>
     <div class="boxed-group">
       <div class="boxed-group-inner seamless">
         <table border="0" cellpadding="0" cellspacing="0" class="boxed-group-table">
@@ -38,55 +45,55 @@
           <tr>
             <th scope="row">Tópicos</th>
             <td><ul>
-              <li>Ferramentas de desenho e manipulação de objectos. <br>
+                <li>Ferramentas de desenho e manipulação de objectos. <br />
                 </li>
-              <li>Gestão de cores. <br>
+                <li>Gestão de cores. <br />
                 </li>
-              <li>Importação de objectos externos (vector, bitmap, áudio e vídeo). <br>
+                <li>Importação de objectos externos (vector, bitmap, áudio e vídeo). <br />
                 </li>
-              <li>Manutenção da Biblioteca. <br>
+                <li>Manutenção da Biblioteca. <br />
                 </li>
-              <li>Composição de cenas e edição da Linha do Tempo. <br>
+                <li>Composição de cenas e edição da Linha do Tempo. <br />
                 </li>
-              <li>Design de Personagens e optimização para animação limitada. <br>
+                <li>Design de Personagens e optimização para animação limitada. <br />
                 </li>
-              <li>Animação com ferramenta de &quot;bones&quot; (Inverse Kinematics) <br>
+                <li>Animação com ferramenta de &quot;bones&quot; (Inverse Kinematics) <br />
                 </li>
-              <li>Animação em blocos complementares. <br>
+                <li>Animação em blocos complementares. <br />
                 </li>
-              <li>Outros: loops, efeitos especiais, trajectos e máscaras. <br>
+                <li>Outros: loops, efeitos especiais, trajectos e máscaras. <br />
                 </li>
-              <li>Importação de áudio e sincronismo de diálogos/acção. <br>
+                <li>Importação de áudio e sincronismo de diálogos/acção. <br />
                 </li>
-              <li>Exportação da animação final ou blocos de animação para edição externa.</li>
-            </ul></td>
+                <li>Exportação da animação final ou blocos de animação para edição externa.</li>
+              </ul></td>
           </tr>
           <tr>
             <th scope="row">Bibliografia</th>
             <td><ul>
-              <li>Apoios, tutoriais e visonamentos disponibilizados nas aulas. <br>
+                <li>Apoios, tutoriais e visonamentos disponibilizados nas aulas. <br />
                 </li>
-              <li>Càmara, S., O Desenho Animado, Editorial Estampa, 2005 <br>
+                <li>Càmara, S., O Desenho Animado, Editorial Estampa, 2005 <br />
                 </li>
-              <li>Corsaro, S., The Flash Animator, New Riders Publishing, 2002 <br>
+                <li>Corsaro, S., The Flash Animator, New Riders Publishing, 2002 <br />
                 </li>
-              <li>Georgenes C., How to Cheat in Adobe Flash CS4, Focal Press, 2009 <br>
+                <li>Georgenes C., How to Cheat in Adobe Flash CS4, Focal Press, 2009 <br />
                 </li>
-              <li>Jackson, C., Flash Cinematic Techniques Enhancing Animated Shorts and Interactive Storytelling, Focal Press, 2010 <br>
+                <li>Jackson, C., Flash Cinematic Techniques Enhancing Animated Shorts and Interactive Storytelling, Focal Press, 2010 <br />
                 </li>
-              <li>Jones, T., et al. Foundation Flash Cartoon Animation, Apress, 2007<br>
+                <li>Jones, T., et al. Foundation Flash Cartoon Animation, Apress, 2007<br />
                 </li>
-              <li>Reinhard, R. e Dowd, S., Macromedia Flash CS4 Professional Bible, Wiley Publishing, 2009 <br>
+                <li>Reinhard, R. e Dowd, S., Macromedia Flash CS4 Professional Bible, Wiley Publishing, 2009 <br />
                 </li>
-              <li>Webster, C., Animation The Mechanics of Motion, Focal Press, 2005 <br>
+                <li>Webster, C., Animation The Mechanics of Motion, Focal Press, 2005 <br />
                 </li>
-              <li>White, T., How to Make an Animated Film, Focal Press, 2009</li>
-            </ul></td>
+                <li>White, T., How to Make an Animated Film, Focal Press, 2009</li>
+              </ul></td>
           </tr>
         </table>
       </div>
     </div>
-    <h2>Computação Multimédia e Interactividade</h2>
+    <h2> <a name="cmi2013" class="anchor" href="#cmi2013"><span class="octicon octicon-link"></span></a> Computação Multimédia e Interactividade</h2>
     <div class="boxed-group">
       <div class="boxed-group-inner seamless">
         <table border="0" cellpadding="0" cellspacing="0" class="boxed-group-table">
@@ -105,36 +112,36 @@
           <tr>
             <th scope="row">Tópicos</th>
             <td><ul>
-              <li> Resumo Estado da Arte; <br>
+                <li> Resumo Estado da Arte; <br />
                 </li>
-              <li> <em>Frameworks</em>; <br>
+                <li> <em>Frameworks</em>; <br />
                 </li>
-              <li>Introdução ao Bootstrap;</li>
-              <li>RWD: <em>media queries</em> e <em>mobile first</em>;</li>
-              <li>Bootstrap <em>grid</em>: default e fluido;</li>
-              <li>Outros: CSS, componentes e javascript;</li>
-              <li>Personalização do Bootstrap;</li>
-              <li>Projecto</li>
-            </ul>            </td>
+                <li>Introdução ao Bootstrap;</li>
+                <li>RWD: <em>media queries</em> e <em>mobile first</em>;</li>
+                <li>Bootstrap <em>grid</em>: default e fluido;</li>
+                <li>Outros: CSS, componentes e javascript;</li>
+                <li>Personalização do Bootstrap;</li>
+                <li>Projecto</li>
+              </ul></td>
           </tr>
           <tr>
             <th scope="row">Bibliografia</th>
             <td><ul>
-              <li>Cederholm, Dan, and Jeffrey Zeldman. CSS3 for Web Designers. New York: Book Apart, 2010.<br>
+                <li>Cederholm, Dan, and Jeffrey Zeldman. CSS3 for Web Designers. New York: Book Apart, 2010.<br />
                 </li>
-              <li>Keith, Jeremy, and Jeffrey Zeldman. HTML5 for Web Designers. New York: Book Apart, 2010.<br>
+                <li>Keith, Jeremy, and Jeffrey Zeldman. HTML5 for Web Designers. New York: Book Apart, 2010.<br />
                 </li>
-              <li>Marcotte, Ethan. Responsive Web Design. New York: Book Apart, 2011<br>
+                <li>Marcotte, Ethan. Responsive Web Design. New York: Book Apart, 2011<br />
                 </li>
-              <li>Wroblewski, Luke. Mobile First. New York: Book Apart, 2011<br>
+                <li>Wroblewski, Luke. Mobile First. New York: Book Apart, 2011<br />
                 </li>
-              <li>Spurlock, Jake. Bootstrap. Sebastopol, CA: O'Reilly Media, 2013. Print. </li>
-            </ul></td>
+                <li>Spurlock, Jake. Bootstrap. Sebastopol, CA: O'Reilly Media, 2013. Print. </li>
+              </ul></td>
           </tr>
         </table>
       </div>
     </div>
-    <h2>Design de Produtos Multimédia</h2>
+    <h2> <a name="dpm2013" class="anchor" href="#dpm2013"><span class="octicon octicon-link"></span></a> Design de Produtos Multimédia</h2>
     <div class="boxed-group">
       <div class="boxed-group-inner seamless">
         <table border="0" cellpadding="0" cellspacing="0" class="boxed-group-table">
@@ -157,64 +164,64 @@
       </div>
     </div>
     <hr />
-    <h2>Anos lectivos em netPA</h2>
+    <h2> <a name="arquivo" class="anchor" href="#arquivo"><span class="octicon octicon-link"></span></a> Anos lectivos em netPA</h2>
     <h3> <a name="2012" class="anchor" href="#2012"><span class="octicon octicon-link"></span></a>2012/2013</h3>
-    <p>1º Semestre 2586 Design de Produtos Multimédia<br>
-      2º Semestre 5715 Atelier de Realização Audiovisual e Multimédia II<br>
-      2º Semestre 7031 Computação de Imagem Digital<br>
-      1º Semestre 9453 Tecnologias de Animação Bidimensional<br>
+    <p>1º Semestre 2586 Design de Produtos Multimédia<br />
+      2º Semestre 5715 Atelier de Realização Audiovisual e Multimédia II<br />
+      2º Semestre 7031 Computação de Imagem Digital<br />
+      1º Semestre 9453 Tecnologias de Animação Bidimensional<br />
       2º Semestre 11048 Atelier de Artes Digitais II</p>
     <h3> <a name="2011" class="anchor" href="#2011"><span class="octicon octicon-link"></span></a>2011/2012</h3>
-    <p>1º Semestre 2279 Introdução à Computação<br>
-      2º Semestre 5715 Atelier de Realização Audiovisual e Multimédia II<br>
-      2º Semestre 5769 Atelier de Design de Sistemas Multimédia I<br>
-      2º Semestre 7031 Computação de Imagem Digital<br>
+    <p>1º Semestre 2279 Introdução à Computação<br />
+      2º Semestre 5715 Atelier de Realização Audiovisual e Multimédia II<br />
+      2º Semestre 5769 Atelier de Design de Sistemas Multimédia I<br />
+      2º Semestre 7031 Computação de Imagem Digital<br />
       1º Semestre 9453 Tecnologias de Animação Bidimensional</p>
-    <h3> <a name="2010" class="anchor" href="#2010"><span class="octicon octicon-link"></span></a>2010/2011 <img src="http://s0.wp.com/wp-includes/images/smilies/icon_smile.gif?m=1129645325g" alt=":)" class="wp-smiley" scale="0"></h3>
+    <h3> <a name="2010" class="anchor" href="#2010"><span class="octicon octicon-link"></span></a>2010/2011 <img src="http://s0.wp.com/wp-includes/images/smilies/icon_smile.gif?m=1129645325g" alt=":)" class="wp-smiley" scale="0" /></h3>
     <p>1º Semestre 9453 Tecnologias de Animação Bidimensional</p>
     <h3> <a name="2009" class="anchor" href="#2009"><span class="octicon octicon-link"></span></a>2009/2010</h3>
-    <p>1º Semestre 2279 Introdução à Computação<br>
-      1º Semestre 2586 Design de Produtos Multimédia<br>
-      1º Semestre 2590 Computação Multimédia e Interactividade<br>
-      2º Semestre 7282 Desenho e Animação 2D e 3D<br>
+    <p>1º Semestre 2279 Introdução à Computação<br />
+      1º Semestre 2586 Design de Produtos Multimédia<br />
+      1º Semestre 2590 Computação Multimédia e Interactividade<br />
+      2º Semestre 7282 Desenho e Animação 2D e 3D<br />
       1º Semestre 9453 Tecnologias de Animação Bidimensional</p>
     <h3> <a name="2008" class="anchor" href="#2008"><span class="octicon octicon-link"></span></a>2008/2009</h3>
-    <p>1º Semestre 2279 Introdução à Computação<br>
-      1º Semestre 2586 Design de Produtos Multimédia<br>
-      1º Semestre 2590 Computação Multimédia e Interactividade<br>
-      1º Semestre 5713 Atelier de Realização Audiovisual e Multimédia I<br>
-      2º Semestre 7282 Desenho e Animação 2D e 3D<br>
+    <p>1º Semestre 2279 Introdução à Computação<br />
+      1º Semestre 2586 Design de Produtos Multimédia<br />
+      1º Semestre 2590 Computação Multimédia e Interactividade<br />
+      1º Semestre 5713 Atelier de Realização Audiovisual e Multimédia I<br />
+      2º Semestre 7282 Desenho e Animação 2D e 3D<br />
       2º Semestre 7290 Computação Multimédia e Interactividades</p>
     <h3> <a name="2007" class="anchor" href="#2007"><span class="octicon octicon-link"></span></a>2007/2008</h3>
-    <p>1º Semestre 2279 Introdução à Computação<br>
-      1º Semestre 2586 Design de Produtos Multimédia<br>
-      1º Semestre 5713 Atelier de Realização Audiovisual e Multimédia I<br>
-      1º Semestre 7031 Computação de Imagem Digital<br>
-      1º Semestre 7281 Sistemas de Informação Multimédia<br>
+    <p>1º Semestre 2279 Introdução à Computação<br />
+      1º Semestre 2586 Design de Produtos Multimédia<br />
+      1º Semestre 5713 Atelier de Realização Audiovisual e Multimédia I<br />
+      1º Semestre 7031 Computação de Imagem Digital<br />
+      1º Semestre 7281 Sistemas de Informação Multimédia<br />
       2º Semestre 7282 Desenho e Animação 2D e 3D</p>
     <h3> <a name="2006" class="anchor" href="#2006"><span class="octicon octicon-link"></span></a>2006/2007</h3>
-    <p>1º Semestre 2279 Introdução à Computação<br>
-      1º Semestre 2586 Design de Produtos Multimédia<br>
-      1º Semestre 2590 Computação Multimédia e Interactividade<br>
-      1º Semestre 4261 Design de Produtos Multimédia I<br>
-      1º Semestre 5713 Atelier de Realização Audiovisual e Multimédia I<br>
-      1º Semestre 7281 Sistemas de Informação Multimédia<br>
-      2º Semestre 7282 Desenho e Animação 2D e 3D<br>
+    <p>1º Semestre 2279 Introdução à Computação<br />
+      1º Semestre 2586 Design de Produtos Multimédia<br />
+      1º Semestre 2590 Computação Multimédia e Interactividade<br />
+      1º Semestre 4261 Design de Produtos Multimédia I<br />
+      1º Semestre 5713 Atelier de Realização Audiovisual e Multimédia I<br />
+      1º Semestre 7281 Sistemas de Informação Multimédia<br />
+      2º Semestre 7282 Desenho e Animação 2D e 3D<br />
       1º Semestre 7291 Atelier de Publicidade e Marketing</p>
     <h3> <a name="2005" class="anchor" href="#2005"><span class="octicon octicon-link"></span></a>2005/2006</h3>
-    <p>1º Semestre 2279 Introdução à Computação<br>
-      1º Semestre 2375 Computação Escrita e Gráfica<br>
-      2º Semestre 2377 Computação da Imagem e Som Digitais<br>
-      1º Semestre 2586 Design de Produtos Multimédia<br>
-      1º Semestre 2590 Computação Multimédia e Interactividade<br>
-      1º Semestre 5707 Atelier de Design Multimédia<br>
+    <p>1º Semestre 2279 Introdução à Computação<br />
+      1º Semestre 2375 Computação Escrita e Gráfica<br />
+      2º Semestre 2377 Computação da Imagem e Som Digitais<br />
+      1º Semestre 2586 Design de Produtos Multimédia<br />
+      1º Semestre 2590 Computação Multimédia e Interactividade<br />
+      1º Semestre 5707 Atelier de Design Multimédia<br />
       2º Semestre 5707 Atelier de Design Multimédia</p>
     <h2> <a name="2004" class="anchor" href="#2004"><span class="octicon octicon-link"></span></a>Anos lectivos anteriores ao netPA</h2>
-    <h3>2004-2005<br>
-      2003-2004<br>
-      2002-2003<br>
-      2001-2002<br>
-      2000-2001<br>
+    <h3>2004-2005<br />
+      2003-2004<br />
+      2002-2003<br />
+      2001-2002<br />
+      2000-2001<br />
       1999-2000</h3>
   </section>
   <footer>
