--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
     <p class="view">pusher of pixels...</p>
   </header>
   <section>
-    <ul class="dashboard-tabs">
-      <li><a href="#tab2013">TAB <span class="counter">AD</span></a></li>  
-      <li><a href="#cmi2013">CMI <span class="counter">AMV</span></a></li>      
-      <li><a href="#dpm2013">TAB <span class="counter">AD</span></a></li>
-      <li><a href="#arquivo">Arquivo</li>
-    </ul>
     <div class="pagehead">
       <div class="container">
         <h1>2013/2014</h1>
       </div>
-    </div>
-    <h2> <a name="tab2013" class="anchor" href="#tab2013"><span class="octicon octicon-link"></span></a> Tecnologias de Animação Bidimensional</h2>
+    </div>  
+    <ul class="dashboard-tabs">
+      <li><a href="#tab2013">TAB <span class="counter">AD</span></a></li>
+      <li><a href="#cmi2013">CMI <span class="counter">AMV</span></a></li>
+      <li><a href="#dpm2013">TAB <span class="counter">AD</span></a></li>
+      <li><a href="#arquivo">Arquivo</a></li>
+    </ul>
+    <h2><a href="#arquivo"> </a><a name="tab2013" class="anchor" href="#tab2013"><span class="octicon octicon-link"></span></a> Tecnologias de Animação Bidimensional</h2>
     <div class="boxed-group">
       <div class="boxed-group-inner seamless">
         <table border="0" cellpadding="0" cellspacing="0" class="boxed-group-table">
