--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
       </div>
     </div>  
     <ul class="dashboard-tabs">
-      <li><a href="#tab2013">TAB <span class="counter">AD</span></a></li>
-      <li><a href="#cmi2013">CMI <span class="counter">AMV</span></a></li>
-      <li><a href="#dpm2013">TAB <span class="counter">AD</span></a></li>
-      <li><a href="#arquivo">Arquivo</a></li>
+      <li><a href="#tab2013">TAB</a></li>
+      <li><a href="#cmi2013">CMI</a></li>
+      <li><a href="#dpm2013">DPM <span class="counter">!</span></a></li>
+      <li><a href="#arquivo" class="a selected">Arquivo</a></li>
     </ul>
     <h2><a href="#arquivo"> </a><a name="tab2013" class="anchor" href="#tab2013"><span class="octicon octicon-link"></span></a> Tecnologias de Animação Bidimensional</h2>
     <div class="boxed-group">
