--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="container">
         <h1>2013/2014</h1>
       </div>
-    </div>  
+    </div>
     <ul class="dashboard-tabs">
       <li><a href="#tab2013">TAB</a></li>
       <li><a href="#cmi2013">CMI</a></li>
@@ -142,6 +142,9 @@
       </div>
     </div>
     <h2> <a name="dpm2013" class="anchor" href="#dpm2013"><span class="octicon octicon-link"></span></a> Design de Produtos Multimédia</h2>
+    <div class="flash-messages">
+      <div class="flash  flash-warn"> Por actualizar </div>
+    </div>    
     <div class="boxed-group">
       <div class="boxed-group-inner seamless">
         <table border="0" cellpadding="0" cellspacing="0" class="boxed-group-table">
