--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <header>
     <h1>Valter de Matos</h1>
     <p></p>
-    <p class="view">pusher of pixels...</p>
+    <p class="view">pushing pixels since '97</p>
   </header>
   <section>
     <div class="pagehead">
@@ -31,7 +31,8 @@
       <li><a href="#dpm2013">DPM <span class="counter">!</span></a></li>
       <li><a href="#arquivo" class="a selected">Arquivo</a></li>
     </ul>
-    <h2><a href="#arquivo"> </a><a name="tab2013" class="anchor" href="#tab2013"><span class="octicon octicon-link"></span></a> Tecnologias de Animação Bidimensional</h2>
+    <h2><a name="tab2013" class="anchor" href="#tab2013"><span class="octicon octicon-link"></span></a>
+    Tecnologias de Animação Bidimensional</h2>
     <div class="boxed-group">
       <div class="boxed-group-inner seamless">
         <table border="0" cellpadding="0" cellspacing="0" class="boxed-group-table">
@@ -40,7 +41,7 @@
           </caption>
           <tr>
             <th scope="row">Objectivos</th>
-            <td>Os alunos devem adquirir um conhecimento profundo do software aplicado a diversas técnicas de animação 2D.</td>
+            <td>Os alunos devem adquirir um conhecimento profundo do software aplicado a  técnicas de animação limitada / cutout 2D.</td>
           </tr>
           <tr>
             <th scope="row">Tópicos</th>
@@ -102,11 +103,11 @@
           </caption>
           <tr>
             <th scope="row">Objectivos</th>
-            <td><p>Aquisição de um conhecimento profundo das mais recentes metodologias e tecnologias de produção de websites no frontend design e compatibilidade mobile / desktop.</p>
+            <td><p>Aquisição de um conhecimento profundo das mais recentes metodologias e tecnologias de produção de <em>websites</em> no <em>frontend</em> design e compatibilidade <em>mobile</em> / <em>desktop</em>.</p>
               <ul>
                 <li> Familiarização com o Estado da Arte técnico do design/desenvolvimento web; </li>
-                <li> Aquisição de competências em tecnologias modernas de produção web com especial incidência na sensibilização ao mobile e responsive web design;</li>
-                <li>Familiarização com uma framework de HTML/CSS/Javascript que cumpra com os propósitos anteriores. </li>
+                <li> Aquisição de competências em tecnologias modernas de produção web com especial incidência na sensibilização ao <em>mobile</em> e <em>responsive web design</em>;</li>
+                <li>Familiarização com uma <em>framework</em> de HTML/CSS/Javascript que cumpra com os propósitos enunciados. </li>
               </ul></td>
           </tr>
           <tr>
@@ -144,7 +145,7 @@
     <h2> <a name="dpm2013" class="anchor" href="#dpm2013"><span class="octicon octicon-link"></span></a> Design de Produtos Multimédia</h2>
     <div class="flash-messages">
       <div class="flash  flash-warn"> Por actualizar </div>
-    </div>    
+    </div>
     <div class="boxed-group">
       <div class="boxed-group-inner seamless">
         <table border="0" cellpadding="0" cellspacing="0" class="boxed-group-table">
@@ -153,21 +154,37 @@
           </caption>
           <tr>
             <th scope="row">Objectivos</th>
-            <td>.</td>
+            <td>O aluno deverá dominar as diferentes fases de produção dos elementos gráficos (2D) necessários à produção de um jogo e sua optimização com vista à integração com a componente de desenvolvimento e programação orientada a objectos.</td>
           </tr>
           <tr>
             <th scope="row">Tópicos</th>
-            <td>.</td>
+            <td>
+              <ul>
+                <li> Compreensão das potencialidades do Flash para produção de jogos; </li>
+                <li> Familiaridade com o interface do Flash e domínio das suas ferramentas; </li>
+                <li> Execução de projectos gráficos e produção de materiais visuais combinados (vectores, bitmaps, texto, vídeo, áudio); </li>
+                <li> Integração com outras ferramentas de produção gráfica; </li>
+                <li> Produção e optimização de spritesheets e elementos gráficos do jogo (cenários, personagens, adereços, outros); </li>
+                <li>Produção das animações (loops) e efeitos especiais;</li>
+              </ul></td>
           </tr>
           <tr>
             <th scope="row">Bibliografia</th>
-            <td>.</td>
+            <td><ul>
+              <li>Apoios e referências diversas fornecidos em aula.</li>
+              <li>Griffith, Christopher. Real-world Flash Game Development: How to Follow Best Practices and Keep Your</li>
+              <li>Sanity. Burlington, MA: Elsevier Focal, 2010</li>
+              <li>Perkins, Todd. Flash Professional CS5 Bible. Hoboken, NJ: Wiley Pub., 2010</li>
+              <li>Makar, Jobe. Macromedia Flash MX Game Design Demystified: The Official Guide. Berkeley, CA: Peachpit, 2002</li>
+              <li>Adobe.com. 2013. Game development | Adobe Developer Connection. [online] Disponível em: http://www.adobe.com/devnet/games.html [acesso: 20 Setembro 2013].</li>
+              <li>Gaming.adobe.com. 2013. Adobe Gaming - Better games. More easily. For more people.. [online] Disponível em: http://gaming.adobe.com/ [acesso: 20 Setembro 2013].</li>
+              <li>Tonypa.pri.ee. 2013. Tile based games. [online] Disponível em: http://www.tonypa.pri.ee/tbw/ start.html [acesso: 20 Setembro 2013]</li>
+            </ul>            </td>
           </tr>
         </table>
       </div>
     </div>
-    <hr />
-    <h2> <a name="arquivo" class="anchor" href="#arquivo"><span class="octicon octicon-link"></span></a> Anos lectivos em netPA</h2>
+    <h2> <a name="arquivo" class="anchor" href="#arquivo"><span class="octicon octicon-link"></span></a> Arquivo: (anos lectivos em netPA)</h2>
     <h3> <a name="2012" class="anchor" href="#2012"><span class="octicon octicon-link"></span></a>2012/2013</h3>
     <p>1º Semestre 2586 Design de Produtos Multimédia<br />
       2º Semestre 5715 Atelier de Realização Audiovisual e Multimédia II<br />
@@ -219,7 +236,7 @@
       1º Semestre 2590 Computação Multimédia e Interactividade<br />
       1º Semestre 5707 Atelier de Design Multimédia<br />
       2º Semestre 5707 Atelier de Design Multimédia</p>
-    <h2> <a name="2004" class="anchor" href="#2004"><span class="octicon octicon-link"></span></a>Anos lectivos anteriores ao netPA</h2>
+    <h2> <a name="2004" class="anchor" href="#2004"><span class="octicon octicon-link"></span></a>(Anos lectivos anteriores ao netPA)</h2>
     <h3>2004-2005<br />
       2003-2004<br />
       2002-2003<br />
@@ -228,7 +245,7 @@
       1999-2000</h3>
   </section>
   <footer>
-    <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+    <p><small>Hosted on GitHub Pages | (original) theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
   </footer>
 </div>
 <script src="javascripts/scale.fix.js"></script> 
